## Automake

bin_PROGRAMS = mpck
mpck_SOURCES = \
	bufio.c \
	bufio.h \
	checkarguments.c \
	checkarguments.h \
	checkfile.c \
	checkfile.h \
	checkframe.c \
	checkframe.h \
	crc.c \
	crc.h \
	file.c \
	file.h \
	filename.c \
	filename.h \
	frame.c \
	frame.h \
	id3.c \
	id3.h \
	main.c \
	matrices.h \
	mp3errors.h \
	mpck.h \
	options.c \
	options.h \
	print.c \
	print.h \
	synchsafe.h \
	total.c \
	total.h \
	bitfile.c \
	bitfile.h \
	layer2.c \
	layer2.h
mpck_LDADD = @GETOPT_LONG_LIB@
